--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -116,6 +116,9 @@
 - date: 2023-09-15
   week: 4
 
+- date: 2023-09-16
+  week: 4
+
 - date: 2023-09-19
   week: 5
   title: virtual memory 3 / multiple processes 1
