--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,4 +1,3 @@
-
 - date: 2023-08-22
   week: 1
   title: introduction / building (pt 1)
@@ -121,9 +120,8 @@
 
 - date: 2023-09-19
   week: 5
-  title: virtual memory 3 / multiple processes 1
-  reading: "[VM](readings/vm.html) §2.1, 3.2, 4, [kernel] §3.3.3; [threads](readings/thread.html)"
-  slides_see: 2023-09-14
+  title: virtual memory 3
+  reading: "[VM](readings/vm.html) §2.1, 3.2"
   slides: yes
   sldies_prelim: yes
   slides_extra: yes
@@ -132,11 +130,6 @@
        *  as a tree
        *  multi-level lookup example
        *  permission bits
-       *  (if time) page table tricks, loading data on demand, swapping
-    *  processes, threads
-    *  creating new processes
-       *  fork, exec*
-    *  copy-on-write
 
 - date: 2023-09-20
   no_class: true
@@ -145,15 +138,20 @@
 
 - date: 2023-09-21
   week: 5
-  title: multiple processes 2
+  title: processes 1 
+  reading: "[VM](readings/vm.html) 4, [kernel] §3.3.3; [threads](readings/thread.html)"
   slides_see: 2023-09-19
+  slides: yes
+  sldies_prelim: yes
+  slides_extra: yes
   description: |
-    *  waiting for processes
-    *  file descriptors
-    *  briefly, pipe and dup2
+    *  page tables: loading data on demand
+    *  processes, threads
+    *  creating new processes
+       *  fork, exec*
+       *  copy-on-write
     *  preview: threads
-
-    *  (if time) start caching
+    *  waiting for processes
 
 
 - date: 2023-09-22
@@ -161,17 +159,18 @@
 
 - date: 2023-09-26
   week: 6
-  title: caches 1
+  title: proceses 2 / caches 1
   reading: "[cache](readings/cache.html)"
   slides: yes
   slides_extra: yes
   slides_prelim: yes
   description: |
+    *  briefly, pipe and dup2
+    *  file descriptors
+
     *  caching idea
-        *  connecting processors to memory
-        *  memory hierarchy
-    *  direct-mapped caches
-        *  valid bits, tags
+    *  connecting processors to memory
+    *  memory hierarchy
 
 - date: 2023-09-27
   lab: true
@@ -182,6 +181,8 @@
   title: caches 2
   slides_see: 2023-09-26
   description: |
+    *  direct-mapped caches
+        *  valid bits, tags
     *  cache misses and C code
     *  set-associative caches
     *  replacement policies
