--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -159,8 +159,6 @@
   title: proceses 2 / caches 1
   reading: "[cache](readings/cache.html)"
   slides: yes
-  slides_extra: yes
-  slides_prelim: yes
   description: |
     *  briefly, pipe and dup2
     *  file descriptors
@@ -176,7 +174,9 @@
 - date: 2023-09-28
   week: 6
   title: caches 2
-  slides_see: 2023-09-26
+  slides: yes
+  slides_extra: yes
+  slides_prelim: yes
   description: |
     *  direct-mapped caches
         *  valid bits, tags
