--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -139,7 +139,7 @@
 - date: 2023-09-21
   week: 5
   title: processes 1 
-  reading: "[VM](readings/vm.html) 4, [kernel] §3.3.3; [threads](readings/thread.html)"
+  reading: "[VM](readings/vm.html) 4, [kernel](readings/thread.html) §3.3.3; [threads](readings/thread.html)"
   slides: yes
   description: |
     *  page tables: loading data on demand
@@ -158,13 +158,12 @@
   week: 6
   title: proceses 2
   slides: yes
+  reading: "[threads](readings/thread.html)"
   description: |
     *  briefly, pipe and dup2
     *  file descriptors
+    *  pipe
 
-    *  caching idea
-    *  connecting processors to memory
-    *  memory hierarchy
 
 - date: 2023-09-27
   lab: true
@@ -178,6 +177,9 @@
   slides_extra: yes
   slides_prelim: yes
   description: |
+    *  caching idea
+    *  (if time) connecting processors to memory
+    *  memory hierarchy
     *  direct-mapped caches
         *  valid bits, tags
     *  cache misses and C code
