--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -235,7 +235,7 @@
     *  locks and mutexes
     *  barriers
     *  interlude: reordering
-    *  monitors
+    *  monitors (start)
 
 - date: 2023-10-13
   week: 8
@@ -246,9 +246,8 @@
   reading: "[sync](readings/sync.html)"
   slides_see: 2023-10-19
   description: |
+   *  monitors (finish)
    *  deadlock
-   *  (briefly) counting semaphores
-   *  (if time) reader/writer locks
    *  transactions (briefly)
 
 
