--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -79,7 +79,7 @@
   no_late: true
   due_message: pagetable part 2 (pre code review) due BEFORE FIRST LAB &mdash; normal late policy does not apply
   grade_describe: |
-    Selected notes on interpreting our testing output below:
+    Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
     <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment
@@ -134,7 +134,7 @@
   portion: 2.0
   due: 2023-10-06
   grade_describe: |
-    Selected notes on interpreting our testing output below:
+    Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
     <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment
