grade_describe parenthetical

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -77,12 +77,13 @@
   due: 2023-10-04
   pre_lab: true
   no_late: true
+  no-late: true
   due_message: pagetable part 2 (pre code review) due BEFORE FIRST LAB &mdash; normal late policy does not apply
   grade_describe: |
     Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
-    <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment
+    <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to initialize the memory it returns)
     <li>tests that count allocations are looking to see if all allocations are accounted for by what's in the page table; there are separate tests that the correct page table entries were filled in
     </ul>
   XXXgrade_describe: |
@@ -137,7 +138,7 @@
     Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
-    <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment
+    <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to initialize the memory it returns)
     <li>tests that count allocations are looking to see if all allocations are accounted for by what's in the page table; there are separate tests that the correct page table entries were filled in
     </ul>
   XXXgrade_describe: |
