--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -80,11 +80,12 @@
   no-late: true
   due_message: pagetable part 2 (pre code review) due BEFORE FIRST LAB &mdash; normal late policy does not apply
   grade_describe: |
-    Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
+    Selected notes on interpreting our testing output below <small>(updated 1 Oct)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
     <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to zero out the memory it returns)
     <li>tests that count allocations are looking to see if all allocations are accounted for by what's in the page table; there are separate tests that the correct page table entries were filled in
+    <li>the expected results of tests of translate() are based on which page table entries map to valid allocations (so the tests will "expect" translate() to return all 1's when the address's page table entry does not appaer to point to a valid allocation)
     </ul>
   XXXgrade_describe: |
     Selected notes on interpreting our testing output below:
@@ -135,11 +136,12 @@
   portion: 2.0
   due: 2023-10-06
   grade_describe: |
-    Selected notes on interpreting our testing output below <small>(added 30 Sep)</small>:
+    Selected notes on interpreting our testing output below <small>(updated 1 Oct)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
     <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to zero out the memory it returns)
     <li>tests that count allocations are looking to see if all allocations are accounted for by what's in the page table; there are separate tests that the correct page table entries were filled in
+    <li>the expected results of tests of translate() are based on which page table entries map to valid allocations (so the tests will "expect" translate() to return all 1's when the address's page table entry does not appear to point to a valid allocation)
     </ul>
   XXXgrade_describe: |
     Selected notes on interpreting our testing output below:
