--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -169,9 +169,8 @@
   short_name: cachelab
   old_page: labhw/memoize.html
   page: labhw/cache-lab.html
-  missing-if-no-feedback: true
+  xxx-missing-if-no-feedback: true
   lab: true
-  tentative: true
   due: 2023-10-11
 
 
