--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -210,6 +210,7 @@
   title: caches 3 / threads 1
   reading: "[cache](readings/cache.html), [pthreads](readings/pthreads.html)"
   slides: yes
+  slides_prelim: yes
   description: |
    *  write policies
    *  the TLB
