--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -249,9 +249,10 @@
   slides_see: 2023-10-19
   description: |
    *  monitors
-   *  (briefly) counting semaphores
    *  deadlock
-   *  transactions (briefly)
+
+   *  (briefly) counting semaphores
+   *  (briefly) transactions
 
 
 - date: 2023-10-18
@@ -268,6 +269,8 @@
   description: |
     > (Reiss out of town)
 
+    *  review:  monitors, deadlock
+    ----
     *  mailbox analogy
        *  inboxes and outboxes
        *  addresses
@@ -289,6 +292,10 @@
   title: networking 2 (URLs + DHCP + DNS)
   reading: "[protocols](readings/protocols.html) §3-4"
   description: |
+    *  (if not covered last week)
+        *  deadlock
+        *  transactions
+
     *  IP
        *  addresses (v4, v6)
        *  routers
