--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -25,7 +25,7 @@
 - date: 2023-08-29
   week: 2
   title: privilege / exceptions
-  reading: "[kernel](readings/kernel.html) §1-2.2, 3"
+  reading: "[kernel](readings/kernel.html) §1-2.2, 3 / [threads](reading/threads.html) §1-2"
   slides: yes
   description: |
     *  kernel mode
@@ -208,7 +208,7 @@
 - date: 2023-10-10
   week: 8
   title: caches 3 / threads 1
-  reading: "[cache](readings/cache.html), [pthreads](readings/pthreads.html)"
+  reading: "[cache](readings/cache.html), [threads](readings/threads.html) §1-2, [pthreads](readings/pthreads.html) §1-2"
   slides: yes
   slides_prelim: yes
   slides_see2: 2023-10-12
@@ -228,7 +228,7 @@
 - date: 2023-10-12
   week: 8
   title: "synchronization 1"
-  reading: "[consistency](readings/consistency.html), [sync](readings/sync.html) §1, 2-7, 8-9"
+  reading: "[sync](readings/sync.html) §1, 2-7, 8-9; [consistency](readings/consistency.html)"
   slides: yes
   slides_prelim: yes
   slides_extra: yes
