--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -216,10 +216,6 @@
    *  write policies
    *  the TLB
 
-   *  creating new threads
-   *  thread use examples
-
-   *  (if time) start synchronization (12 Oct slides)
 
 - date: 2023-10-11
   lab: true
@@ -233,11 +229,12 @@
   slides_prelim: yes
   slides_extra: yes
   description: |
+    *  creating new threads
+    *  thread use examples
+
     *  problem of synchronization
     *  atomicity, race conditions
     *  locks and mutexes
-    *  barriers
-    *  interlude: reordering
 
 - date: 2023-10-13
   week: 8
@@ -246,13 +243,17 @@
   week: 9
   title: synchronization 3
   reading: "[sync](readings/sync.html), [deadlock](readings/deadlock.html)"
-  slides_see: 2023-10-19
+  slides_see: 2023-10-12
+  slides: yes
+  slides_extra: yes
   description: |
-   *  monitors
+   *  barriers
+   *  interlude: reordering
    *  deadlock
 
-   *  (briefly) counting semaphores
    *  (briefly) transactions
+
+   *  producer/consumer problem
 
 
 - date: 2023-10-18
@@ -261,51 +262,45 @@
 
 - date: 2023-10-19
   week: 9
-  title: networking 1 (IP+routing)
-  reading: "[protocols](readings/protocols.html) §1-2"
+  title: synchronization 4 / networking 1
+  reading: "[protocols](readings/protocols.html) §1"
   slides: yes
   slides_extra: yes
   slides_prelim: yes
+  slides_see: 20231017
   description: |
     > (Reiss out of town)
 
-    *  review:  monitors, deadlock
+    *  monitors
+
     ----
+
     *  mailbox analogy
        *  inboxes and outboxes
        *  addresses
        *  best-effort delivery
        *  envelope versus contents
-    *  connections (TCP)
-       *  acknowledgements
-       *  state machine
     *  names and addresses
-       *  layers preview
-    *  example: a frame
-       *  layers (link, network, transport)
+    *  layers preview
 
 - date: 2023-10-20
   week: 9
 
 - date: 2023-10-24
   week: 10
-  title: networking 2 (URLs + DHCP + DNS)
-  reading: "[protocols](readings/protocols.html) §3-4"
+  title: networking 2
+  reading: "[protocols](readings/protocols.html) §2-4"
   description: |
-    *  (if not covered last week)
-        *  deadlock
-        *  transactions
-
+    *  layers
+    *  connections (TCP)
+       *  acknowledgements
+       *  state machine
+    *  example: a frame
+       *  layers (link, network, transport)
     *  IP
        *  addresses (v4, v6)
        *  routers
     *  port numbers and UDP
-    *  DNS
-       *  is a distributed database
-       *  with caching
-    *  URLs
-    *  DHCP
-    *  NAT
 
 - date: 2023-10-25
   lab: true
@@ -313,12 +308,19 @@
 
 - date: 2023-10-26
   week: 10
-  title: secure channels 1
+  title: networking 3 / secure channels 1
   reading: "[security](readings/sec.html) §1-1.5, 3"
   slides: yes
   slides_extra: yes
   slides_prelim: yes
   description: |
+    *  DNS
+       *  is a distributed database
+       *  with caching
+    *  URLs
+    *  DHCP
+    *  NAT
+
     *  cryptography (start)
        *  symmetric encryption
        *  asymmetric encryption
