adjust lecture recording link

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -262,7 +262,7 @@
   description: |
     > (Reiss out of town, Campbell guest lectured)
 
-    Lecture recording: [link](https://uva.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cd5ea24b-2186-4fa7-8773-b0a00129693a)
+    > Access lecture recording [here](https://uva.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cd5ea24b-2186-4fa7-8773-b0a00129693a)
    
     *  deadlock
        *  definition
