--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -263,6 +263,10 @@
     > (Reiss out of town, Campbell guest lectured)
 
     > Access lecture recording [here](https://uva.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cd5ea24b-2186-4fa7-8773-b0a00129693a)
+    
+    > Or version with volume boosted: [browser](https://www.cs.virginia.edu/~cr4bd/videoplayer/?3130/F2023/recordings/20231019-video-and-audio-loud) [mp4](https://www.cs.virginia.edu/~cr4bd/3130/F2023/recordings/20231019-video-and-audio.mp4)
+
+    > Or if that doesn't work, last semester's 4 April lecture (last part) [link to schedule from last semester](https://www.cs.virginia.edu/~cr4bd/3130/S2023/schedule.html#week=12)
    
     *  deadlock
        *  definition
