--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -270,8 +270,8 @@
 
     > Or if that doesn't work/you prefer me doing the lecture:
     > 
-    > *  last semester's 4 April lecture starting at 24 minutes in covers close to the same material: [link to schedule from last semester](https://www.cs.virginia.edu/~cr4bd/3130/S2023/schedule.html#week=12); or
     > *  I have a recording of me practicing going through the same topics outside lecture: <!-- [browser](https://www.cs.virginia.edu/~cr4bd/videoplayer/?3130/F2023/recordings/20231019-alt-video-and-audio)-->  [mp4](https://www.cs.virginia.edu/~cr4bd/3130/F2023/recordings/20231019-alt-video-and-audio.mp4); or
+    > *  last semester's 4 April lecture starting at 24 minutes in covers close to the same material: [link to schedule from last semester](https://www.cs.virginia.edu/~cr4bd/3130/S2023/schedule.html#week=12)
    
     *  deadlock
        *  definition
