--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -257,8 +257,6 @@
   title: synchronization 4
   reading: "[sync](readings/sync.html), [pthreads](readings/pthreads.html)"
   slides: yes
-  slides_extra: yes
-  slides_prelim: yes
   description: |
     > (Reiss out of town, Campbell guest lectured)
     
@@ -291,6 +289,7 @@
   slides_prelim: yes
   description: |
     *  monitors (finish)
+    *  false sharing
     *  briefly, transactions
 
     *  mailbox analogy
