--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -285,8 +285,6 @@
   title: synchronization 5 / networking 1
   reading: "[protocols](readings/protocols.html) §2-4"
   slides: yes
-  slides_extra: yes
-  slides_prelim: yes
   description: |
     *  monitors (finish)
     *  false sharing
@@ -306,7 +304,9 @@
   week: 10
   title: networking 2
   reading: "[security](readings/sec.html) §1-1.5, 3"
-  slides_see: 2023-10-24
+  slides: yes
+  slides_extra: yes
+  slides_prelim: yes
   description: |
     *  connections atop mailbox model (finish)
     *  names and addresses
