--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -283,7 +283,7 @@
 - date: 2023-10-24
   week: 10
   title: synchronization 5 / networking 1
-  reading: "[protocols](readings/protocols.html) §2-4"
+  reading: "[protocols](readings/protocols.html) §1-2"
   slides: yes
   description: |
     *  monitors (finish)
@@ -303,7 +303,7 @@
 - date: 2023-10-26
   week: 10
   title: networking 2
-  reading: "[security](readings/sec.html) §1-1.5, 3"
+  reading: "[protocols](readings/protocols.html) §1-6"
   slides: yes
   slides_extra: yes
   slides_prelim: yes
@@ -315,6 +315,10 @@
     *  IP
        *  addresses (v4, v6)
        *  routers
+    *  port numbers and UDP
+    *  DNS
+       *  is a distributed database
+       *  with caching
 
 - date: 2023-10-27
   week: 10
@@ -322,15 +326,13 @@
 - date: 2023-10-31
   week: 11
   title: networking 3 / secure channels 1
+  slides_see: 2023-10-26
   slides: yes
   slides_prelim: yes
   slides_extra: yes
-  reading: "[security](readings/sec.html) §1.5-2"
+  reading: "[security](readings/sec.html) §1-1.5"
   description: |
-    *  port numbers and UDP
-    *  DNS
-       *  is a distributed database
-       *  with caching
+
     *  URLs
     *  DHCP
     *  NAT
@@ -339,7 +341,6 @@
        *  symmetric encryption
        *  asymmetric encryption
        *  digital signature
-    *  replay attacks
 
 - date: 2023-11-01
   lab: true
@@ -347,21 +348,17 @@
 
 - date: 2023-11-02
   week: 11
-  title: secure channels 2 / pipeline 1
-  reading: "[processors](readings/processors.html) §1-2"
+  title: secure channels 2
+  reading: "[security](readings/sec.html) §1-3"
   slides_see: 2023-10-31
-  slides: yes
-  slides_prelim: yes
-  slides_extra: yes
   description: |
+   *  replay attacks
    *  cryptography (finish)
         *  cryptographic hashes
         *  key exchange
    *  public key infrastructure
    *  TLS protocol outline
 
-   *  pipelining idea
-   *  review: single-cycle CPU
 
 - date: 2023-11-03
   week: 11
@@ -377,10 +374,14 @@
 
 - date: 2023-11-09
   week: 12
-  reading: "[processors](readings/processors.html) §2-3"
-  title: pipelining 2
-  slides_see: 2023-11-02
+  reading: "[processors](readings/processors.html) §1-3"
+  title: pipelining 1
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   description: |
+   *  pipelining idea
+   *  review: single-cycle CPU
    *  pipelining for the CPU
    *  data hazards
    *  hazard handling, part 1
@@ -395,7 +396,7 @@
 
 - date: 2023-11-14
   week: 13
-  title: pipelining 3
+  title: pipelining 2
   reading: "[processors](readings/processors.html) §2-3"
   slides_see: 2023-11-02
   description: |
