note re: assignment due

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -427,6 +427,8 @@
 
 - date: 2023-11-17
   week: 13
+  description: |
+    NOTE: Assignment due following Tuesday!
 
 - date: 2023-11-21
   week: 14
